--- a/charts/argo-cd/templates/argocd-server/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress.yaml
@@ -60,7 +60,7 @@ spec:
       - {{ tpl .name $ }}
         {{- end }}
       {{- end }}
-      secretName: argocd-server-tls
+      secretName: {{ .Values.server.ingress.secretName | default "argocd-server-tls" }}
     {{- end }}
     {{- with .Values.server.ingress.extraTls }}
       {{- tpl (toYaml .) $ | nindent 4 }}
